syntax = "proto3";
package types;

import "google/protobuf/timestamp.proto";

option go_package = "./types";


// ExecutionBlock is stored in the blocks table under <chainID>:<reversePaddedNumber>
message ExecutionBlock {
    bytes hash = 1;
    bytes parent_hash = 2;
    bytes coinbase = 4;
    bytes root = 5;
    bytes tx_hash = 6;
    bytes receipt_hash = 7;
    uint64 number = 9;
    uint64 gas_limit = 10;
    uint64 gas_used = 11;
    google.protobuf.Timestamp time = 12;
    bytes extra = 13;
    bytes random = 14;
    bytes bloom = 17;
    bytes base_fee = 18;
    repeated ExecutionTransaction transactions = 21;
    repeated ExecutionWithdrawal withdrawals = 22;
}

message ExecutionWithdrawal {
    uint64 index = 1;
    uint64 validator_index = 2;
    bytes address = 3;
    bytes amount = 4;
}

message ExecutionTransaction {
    uint32 type = 1;
    uint64 nonce = 2;
    bytes max_priority_fee_per_gas = 4;
    bytes max_fee_per_gas = 5;
    uint64 gas = 6;
    bytes value = 7;
    bytes data = 8;
    bytes to = 12;
    bytes from = 13;

    bytes chain_id = 14;

    repeated AccessList access_list = 15;

    bytes hash = 16;

    // Receipt fields
    bytes contract_address = 17;
    uint64 commulative_gas_used = 18;
    uint64 gas_used = 19;
    bytes logs_bloom = 20;
    uint64 status = 21;
    string error_msg = 22;
    repeated ExecutionLog logs = 23;

    // Internal transactions
    repeated ExecutionInternalTransaction itx = 24;
}

message IsContractUpdate {
    bool is_contract = 1;
    bool success = 2;
}

message AccessList {
    bytes address = 1;
    repeated bytes storage_keys = 2;
}

message ExecutionLog {
    bytes address = 1;
    bytes data = 2;
    bool removed = 3;
    repeated bytes topics = 4;
}

message ExecutionInternalTransaction {
    string type = 1;
    bytes from = 2;
    bytes to = 3;
    bytes value = 4;
    string error_msg = 5;
    string path = 6;
}

// Indexed structs stored in the data table

message ExecutionBlockIndexed {
    bytes hash = 1;
    bytes parent_hash = 2;
    bytes coinbase = 4;
    uint64 number = 9;
    uint64 gas_limit = 10;
    uint64 gas_used = 11;
    google.protobuf.Timestamp time = 12;
    bytes base_fee = 18;
    uint64 transaction_count = 20;
    bytes lowest_gas_price = 22;
    bytes highest_gas_price = 23;
    // uint64 duration = 24;
    bytes tx_reward = 25;
    // bytes base_fee_change = 27;
    // bytes block_utilization_change = 28;
    uint64 internal_transaction_count = 29;
}

message ExecutionWithdrawalIndexed {
    uint64 block_number =1;
    uint64 index = 2;
    uint64 validator_index = 3;
    bytes address = 4;
    bytes amount = 5;
    google.protobuf.Timestamp time = 6;
}

message ExecutionTransactionIndexed {
    bytes hash = 1;
    uint64 block_number = 2;
    google.protobuf.Timestamp time = 3;
    bytes method_id = 4;
    bytes from = 5;
    bytes to = 6;
    bytes value = 7;
    bytes tx_fee = 8;
    bytes gas_price = 9;
    bool is_contract_creation = 10;
    // invokes_contract is unused, should mark reserved!
    bool invokes_contract = 11;
    string error_msg = 12;
}

message ExecutionInternalTransactionIndexed {
    bytes parent_hash = 1;
    uint64 block_number = 2;
    string type = 3;
    google.protobuf.Timestamp time = 4;
    bytes from = 5;
    bytes to = 6;
    bytes value = 7;
}

message ExecutionSQRCTF1Indexed {
    bytes parent_hash = 1;
    uint64 block_number = 2;
    bytes token_address = 3;
    google.protobuf.Timestamp time = 4;
    bytes from = 5;
    bytes to = 6;
    bytes value = 7;
}

message ExecutionSQRCTN1Indexed {
    bytes parent_hash = 1;
    uint64 block_number = 2;
    bytes token_address = 3;
    google.protobuf.Timestamp time = 4;
    bytes from = 5;
    bytes to = 6;
    bytes token_id = 7;
}

// https://eips.ethereum.org/EIPS/eip-1155
message ExecutionSQRCTB1Indexed {
    bytes parent_hash = 1;
    uint64 block_number = 2;
    bytes token_address = 3;
    google.protobuf.Timestamp time = 4;
    bytes from = 5;
    bytes to = 6;
    bytes token_id = 7;
    bytes value = 8;
    // the address approved to make the transfer
    bytes operator = 9;
}
